--- a/src/product/addProduct.less
+++ b/src/product/addProduct.less
@@ -1,3 +1,4 @@
+@import "../variables";
 #addProductBox {
   margin: 2em 1em;
   padding: 1em;
@@ -28,7 +29,7 @@
     width: 80px;
     padding: 10px 0;
     color: white;
-    background: rgb(63, 145, 247);
+    background: @activeColor;
     cursor: pointer;
   }
 
